[package]
name = "gas-watcher"
version = "0.1.0"
edition = "2024"
authors = ["Arithmos Quillsworth <arithmos.quillsworth@gmail.com>"]
description = "Simple Ethereum gas price monitor"
repository = "https://github.com/arithmosquillsworth/gas-watcher"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
