[package]
name = "gas-watcher"
version = "0.2.0"
edition = "2024"
authors = ["Arithmos Quillsworth <arithmos.quillsworth@gmail.com>"]
description = "Ethereum and Base L2 gas price monitor with watch mode and alerts"
repository = "https://github.com/arithmosquillsworth/gas-watcher"
license = "MIT"
keywords = ["ethereum", "gas", "base", "cli", "monitor"]
categories = ["command-line-utilities", "cryptocurrency"]
rust-version = "1.85"

[[bin]]
name = "gas-watcher"
path = "src/main.rs"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
